fix typo of site_uri
Signed-off-by: litreily <707922098@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Notes
 site_author: Litreily
 site_description: Note Everything
-site_url: http://www.litreily.top/notes/
+site_url: http://www.litreily.top/Notes/
 repo_url: https://github.com/Litreily/Notes
 edit_uri: tree/mkdocs/docs/
 
