--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,7 @@ nav:
     - ip: commands/ip.md
     - ls: commands/ls.md
     - lsb_release: commands/lsb_release.md
+    - man: commands/man.md
     - mkdir: commands/mkdir.md
     - mksquashfs: commands/mksquashfs.md
     - mount: commands/mount.md
@@ -87,6 +88,7 @@ nav:
     - sar: commands/sar.md
     - sed: commands/sed.md
     - sudo: commands/sudo.md
+    - xargs: commands/xargs.md
   - Linux C: 
     - Linux: linux/README.md
     - Preprocessor: linux/preprocessor.md
