docs: add cscope.md
Signed-off-by: litreily <707922098@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,6 +146,7 @@ nav:
     - Gitbook: software/gitbook.md
     - Hexo: software/hexo.md
     - Nodejs: software/nodejs.md
+    - Cscope: software/cscope.md
     - Teraterm: software/teraterm.md
     - Tex: software/tex.md
     - Tmux: software/tmux.md
