docs: add commands/rsync.md
Signed-off-by: litreily <707922098@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,6 +86,7 @@ nav:
     - pwd: commands/pwd.md
     - openssl: commands/openssl.md
     - rm: commands/rm.md
+    - rsync: commands/rsync.md
     - sar: commands/sar.md
     - sed: commands/sed.md
     - sudo: commands/sudo.md
