style: disable default font which load from googleapis.com
loading font info need lots of time in China, and easy to fail, so
disable it

Signed-off-by: litreily <707922098@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ theme:
   name: material
   # custom_dir:
   # favicon: 
+  font: false
   icon:
     logo: material/book-open-page-variant
   features:
