cic: update linux related structure
Signed-off-by: litreily <707922098@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,13 +99,14 @@ nav:
     - xargs: commands/xargs.md
   - Linux C: 
     - Linux: linux/README.md
-    - Preprocessor: linux/preprocessor.md
-    - Keywords: linux/keywords.md
+    - Basic:
+      - Preprocessor: linux/basic/preprocessor.md
+      - Keywords: linux/basic/keywords.md
     - 内核开发:
       - 进程管理: linux/kernel-development/ch3-process-management.md
-    - Kernel: 
-      - Ftrace: linux/kernel/ftrace.md
-      - Watchdog: linux/kernel/watchdog.md
+    - 内核调试: 
+      - Ftrace: linux/kernel-debug/ftrace.md
+      - Watchdog: linux/kernel-debug/watchdog.md
   - Network: 
     - Protocol: 
       - Protocol: network/protocol.md
