feat: support pymdownx.arithmatex
Signed-off-by: litreily <707922098@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,8 @@ markdown_extensions:
   - meta
   - toc:
       permalink: true
-  # - pymdownx.arithmatex
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.betterem:
       smart_enable: all
   # - pymdownx.caret
@@ -69,6 +70,9 @@ extra:
 extra_css:
   - css/extra.css
 extra_javascript:
+  - js/config.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 nav:
   - Introduction: index.md
