docs: add note about linux/communications/i2c
Signed-off-by: litreily <707922098@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,8 @@ nav:
       - Preprocessor: linux/basic/preprocessor.md
       - Keywords: linux/basic/keywords.md
       - Weak Symbol: linux/basic/weak_symbol.md
+    - Communications:
+      - I2C: linux/communications/i2c.md
     - 内核开发:
       - 进程管理: linux/kernel-development/ch3-process-management.md
       - 进程调度: linux/kernel-development/ch4-process-scheduling.md
