feat: update tabs feature
Signed-off-by: litreily <707922098@qq.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ theme:
   icon:
     logo: material/book-open-page-variant
   features:
-    - tabs
+    - navigation.tabs
   palette:
     scheme: 'default'
     primary: 'blue grey'
